--- a/index.html
+++ b/index.html
@@ -293,22 +293,61 @@
     </div>
     <div class="debug-controls">
         <h3>Post-Processing</h3>
-        <div class="control-group"><span class="control-label">Focus:</span><input type="range" id="focus" min="2" max="20" step="0.1" value="6.5"><input type="number" id="focus-input" min="0" max="100" step="0.1" value="6.5"></div>
-        <div class="control-group"><span class="control-label">Aperture:</span><input type="range" id="aperture" min="0.1" max="20" step="0.1" value="8.0"><input type="number" id="aperture-input" min="0.1" max="100" step="0.1" value="8.0"></div>
-        <div class="control-group"><span class="control-label">Max Blur:</span><input type="range" id="maxblur" min="0" max="0.05" step="0.001" value="0.015"><input type="number" id="maxblur-input" min="0" max="1" step="0.001" value="0.015"></div>
-        <div class="control-group"><span class="control-label">Saturation:</span><input type="range" id="saturation" min="0" max="2.5" step="0.05" value="1.3"><input type="number" id="saturation-input" min="0" max="3" step="0.1" value="1.3"></div>
-        <div class="control-group"><span class="control-label">Luminosité:</span><input type="range" id="brightness" min="0.5" max="2.0" step="0.05" value="1.0"><input type="number" id="brightness-input" min="0" max="3" step="0.1" value="1.0"></div>
+        <div class="control-group">
+            <span class="control-label">Focus:</span>
+            <input type="range" id="focus" min="2" max="20" step="0.1" value="6.5">
+            <input type="number" id="focus-input" min="0" max="100" step="0.1" value="6.5">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Aperture:</span>
+            <!-- FIXED: Changed range to 0.5-10 for better control -->
+            <input type="range" id="aperture" min="0.5" max="10" step="0.1" value="2.0">
+            <input type="number" id="aperture-input" min="0.1" max="20" step="0.1" value="2.0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Max Blur:</span>
+            <!-- FIXED: Adjusted range for Three.js r128 -->
+            <input type="range" id="maxblur" min="0" max="0.05" step="0.001" value="0.01">
+            <input type="number" id="maxblur-input" min="0" max="0.1" step="0.001" value="0.01">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Saturation:</span>
+            <input type="range" id="saturation" min="0" max="2.5" step="0.05" value="1.3">
+            <input type="number" id="saturation-input" min="0" max="3" step="0.1" value="1.3">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Luminosité:</span>
+            <input type="range" id="brightness" min="0.5" max="2.0" step="0.05" value="1.0">
+            <input type="number" id="brightness-input" min="0" max="3" step="0.1" value="1.0">
+        </div>
 
         <h3 style="margin-top: 20px;">Diorama Effect</h3>
-        <div class="control-group"><span class="control-label">Relief:</span><input type="range" id="relief" min="0" max="3.0" step="0.01" value="1.0"><input type="number" id="relief-input" min="0" max="5" step="0.01" value="1.0"></div>
-        <div class="control-group"><span class="control-label">Déplacement:</span><input type="range" id="displacement" min="0" max="0.3" step="0.001" value="0.1"><input type="number" id="displacement-input" min="0" max="0.5" step="0.001" value="0.1"></div>
-        <div class="control-group"><span class="control-label">Océan Brillant:</span><input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5"><input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5"></div>
-        <!-- NOUVEAU: Slider pour les lumières de la ville -->
-        <div class="control-group"><span class="control-label">Lumières Ville:</span><input type="range" id="cityLights" min="0" max="3.0" step="0.05" value="1.0"><input type="number" id="cityLights-input" min="0" max="5.0" step="0.1" value="1.0"></div>
+        <div class="control-group">
+            <span class="control-label">Relief:</span>
+            <input type="range" id="relief" min="0" max="3.0" step="0.01" value="1.0">
+            <input type="number" id="relief-input" min="0" max="5" step="0.01" value="1.0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Déplacement:</span>
+            <input type="range" id="displacement" min="0" max="0.3" step="0.001" value="0.1">
+            <input type="number" id="displacement-input" min="0" max="0.5" step="0.001" value="0.1">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Océan Brillant:</span>
+            <input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5">
+            <input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5">
+        </div>
+        <!-- REMOVED: City lights slider not connected to any functionality -->
 
         <div class="debug-info">
-            <p><kbd>A</kbd> Toggle auto-rotation</p><p><kbd>R</kbd> Reset to defaults</p><p><kbd>F</kbd> Toggle auto-focus</p><p><kbd>T</kbd> Toggle test objects</p>
-            <p><kbd>D</kbd> Debug DOF info</p><p><kbd>S</kbd> Log detailed state</p><p><kbd>L</kbd> Toggle frame logging</p><p><kbd>1/2/3</kbd> Focus presets</p>
+            <p><kbd>A</kbd> Toggle auto-rotation</p>
+            <p><kbd>R</kbd> Reset to defaults</p>
+            <p><kbd>F</kbd> Toggle auto-focus</p>
+            <p><kbd>T</kbd> Toggle test objects</p>
+            <p><kbd>D</kbd> Debug DOF info</p>
+            <p><kbd>S</kbd> Log detailed state</p>
+            <p><kbd>L</kbd> Toggle frame logging</p>
+            <p><kbd>1/2/3</kbd> Focus presets</p>
         </div>
         <div class="debug-status">
             <div class="status-item"><span>Auto-rotation:</span><span id="status-autorotation" class="status-value active">ON</span></div>
@@ -322,10 +361,11 @@
     <!-- Scripts CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <!-- CRITICAL: Load BokehShader before BokehPass -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/BokehShader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/BokehShader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/BokehPass.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
 
@@ -337,9 +377,35 @@
 
     <!-- Scripts UI -->
     <script>
-        window.addEventListener('load', () => { setTimeout(() => { const infoPanel = document.querySelector('.info-panel'); if (infoPanel) { infoPanel.style.transition = 'opacity 1s ease-out'; setTimeout(() => { infoPanel.style.opacity = '0'; setTimeout(() => { infoPanel.style.display = 'none'; }, 1000); }, 8000); } }, 2000); });
-        window.addEventListener('debugStateChange', (e) => { const el = document.getElementById('status-' + e.detail.key); if (!el) return; el.textContent = e.detail.value ? 'ON' : 'OFF'; el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive'); });
-        window.addEventListener('autoRotationChange', (e) => { const el = document.getElementById('status-autorotation'); if (el) { el.textContent = e.detail.value ? 'ON' : 'OFF'; el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive'); } });
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                const infoPanel = document.querySelector('.info-panel');
+                if (infoPanel) {
+                    infoPanel.style.transition = 'opacity 1s ease-out';
+                    setTimeout(() => {
+                        infoPanel.style.opacity = '0';
+                        setTimeout(() => {
+                            infoPanel.style.display = 'none';
+                        }, 1000);
+                    }, 8000);
+                }
+            }, 2000);
+        });
+
+        window.addEventListener('debugStateChange', (e) => {
+            const el = document.getElementById('status-' + e.detail.key);
+            if (!el) return;
+            el.textContent = e.detail.value ? 'ON' : 'OFF';
+            el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive');
+        });
+
+        window.addEventListener('autoRotationChange', (e) => {
+            const el = document.getElementById('status-autorotation');
+            if (el) {
+                el.textContent = e.detail.value ? 'ON' : 'OFF';
+                el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive');
+            }
+        });
     </script>
 </body>
 </html>
