--- a/index.html
+++ b/index.html
@@ -295,8 +295,9 @@
         <h3>Post-Processing</h3>
         <div class="control-group">
             <span class="control-label">Focus:</span>
-            <input type="range" id="focus" min="2" max="20" step="0.1" value="6.5">
-            <input type="number" id="focus-input" min="0" max="100" step="0.1" value="6.5">
+            <!-- OPTIMIZED: Range centered around useful values -->
+            <input type="range" id="focus" min="4" max="12" step="0.05" value="6.5">
+            <input type="number" id="focus-input" min="0" max="100" step="0.05" value="6.5">
         </div>
         <div class="control-group">
             <span class="control-label">Aperture:</span>
@@ -337,7 +338,61 @@
             <input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5">
             <input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5">
         </div>
-        <!-- REMOVED: City lights slider not connected to any functionality -->
+
+        <h3 style="margin-top: 20px;">Miniature Style</h3>
+        <div class="control-group">
+            <span class="control-label">Stylisation:</span>
+            <input type="range" id="stylization" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="stylization-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Effet Peinture:</span>
+            <input type="range" id="paintEffect" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="paintEffect-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Mode Nuit:</span>
+            <input type="range" id="nightMode" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="nightMode-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Lueur Magique:</span>
+            <input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="0.5">
+            <input type="number" id="glowIntensity-input" min="0" max="2" step="0.1" value="0.5">
+        </div>
+
+        <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255,255,255,0.2);">
+            <button id="preset-realistic" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Réaliste</button>
+            <button id="preset-miniature" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Miniature</button>
+            <button id="preset-night" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Night of Mini Dead</button>
+        </div>
+        <h3 style="margin-top: 20px;">Miniature Style</h3>
+        <div class="control-group">
+            <span class="control-label">Stylisation:</span>
+            <input type="range" id="stylization" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="stylization-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Effet Peinture:</span>
+            <input type="range" id="paintEffect" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="paintEffect-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Mode Nuit:</span>
+            <input type="range" id="nightMode" min="0" max="1" step="0.05" value="0">
+            <input type="number" id="nightMode-input" min="0" max="1" step="0.05" value="0">
+        </div>
+        <div class="control-group">
+            <span class="control-label">Lueur Magique:</span>
+            <input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="0.5">
+            <input type="number" id="glowIntensity-input" min="0" max="2" step="0.1" value="0.5">
+        </div>
+
+        <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255,255,255,0.2);">
+            <button id="preset-realistic" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Réaliste</button>
+            <button id="preset-miniature" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Miniature</button>
+            <button id="preset-night" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Night of Mini Dead</button>
+        </div>
 
         <div class="debug-info">
             <p><kbd>A</kbd> Toggle auto-rotation</p>
@@ -370,6 +425,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
 
     <!-- Scripts Projet -->
+    <script src="js/MiniatureStyleShader.js"></script>
     <script src="js/postProcessing.js"></script>
     <script src="js/scene/lights.js"></script>
     <script src="js/scene/world.js"></script>
