--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@
             margin-bottom: 15px;
             color: #FFE66D;
             font-size: 1.1em;
+            margin-top: 20px;
         }
+
+            .debug-controls h3:first-child {
+                margin-top: 0;
+            }
 
         .control-group {
             margin-bottom: 12px;
@@ -174,7 +179,7 @@
         }
 
         .control-label {
-            width: 90px;
+            width: 100px;
             display: inline-block;
             font-size: 0.9em;
         }
@@ -293,116 +298,36 @@
     </div>
     <div class="debug-controls">
         <h3>Post-Processing</h3>
-        <div class="control-group">
-            <span class="control-label">Focus:</span>
-            <!-- OPTIMIZED: Range centered around useful values -->
-            <input type="range" id="focus" min="4" max="12" step="0.05" value="6.5">
-            <input type="number" id="focus-input" min="0" max="100" step="0.05" value="6.5">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Aperture:</span>
-            <!-- FIXED: Changed range to 0.5-10 for better control -->
-            <input type="range" id="aperture" min="0.5" max="10" step="0.1" value="2.0">
-            <input type="number" id="aperture-input" min="0.1" max="20" step="0.1" value="2.0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Max Blur:</span>
-            <!-- FIXED: Adjusted range for Three.js r128 -->
-            <input type="range" id="maxblur" min="0" max="0.05" step="0.001" value="0.01">
-            <input type="number" id="maxblur-input" min="0" max="0.1" step="0.001" value="0.01">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Saturation:</span>
-            <input type="range" id="saturation" min="0" max="2.5" step="0.05" value="1.3">
-            <input type="number" id="saturation-input" min="0" max="3" step="0.1" value="1.3">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Luminosité:</span>
-            <input type="range" id="brightness" min="0.5" max="2.0" step="0.05" value="1.0">
-            <input type="number" id="brightness-input" min="0" max="3" step="0.1" value="1.0">
-        </div>
+        <div class="control-group"><span class="control-label">Focus:</span><input type="range" id="focus" min="4" max="12" step="0.05" value="6.5"><input type="number" id="focus-input" min="0" max="100" step="0.05" value="6.5"></div>
+        <div class="control-group"><span class="control-label">Aperture:</span><input type="range" id="aperture" min="0.5" max="10" step="0.1" value="2.0"><input type="number" id="aperture-input" min="0.1" max="20" step="0.1" value="2.0"></div>
+        <div class="control-group"><span class="control-label">Max Blur:</span><input type="range" id="maxblur" min="0" max="0.05" step="0.001" value="0.01"><input type="number" id="maxblur-input" min="0" max="0.1" step="0.001" value="0.01"></div>
+        <div class="control-group"><span class="control-label">Saturation:</span><input type="range" id="saturation" min="0" max="2.5" step="0.05" value="1.3"><input type="number" id="saturation-input" min="0" max="3" step="0.1" value="1.3"></div>
+        <div class="control-group"><span class="control-label">Luminosité:</span><input type="range" id="brightness" min="0.5" max="2.0" step="0.05" value="1.0"><input type="number" id="brightness-input" min="0" max="3" step="0.1" value="1.0"></div>
 
-        <h3 style="margin-top: 20px;">Diorama Effect</h3>
-        <div class="control-group">
-            <span class="control-label">Relief:</span>
-            <input type="range" id="relief" min="0" max="3.0" step="0.01" value="1.0">
-            <input type="number" id="relief-input" min="0" max="5" step="0.01" value="1.0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Déplacement:</span>
-            <input type="range" id="displacement" min="0" max="0.3" step="0.001" value="0.1">
-            <input type="number" id="displacement-input" min="0" max="0.5" step="0.001" value="0.1">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Océan Brillant:</span>
-            <input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5">
-            <input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5">
-        </div>
+        <h3>Diorama Effect</h3>
+        <div class="control-group"><span class="control-label">Relief:</span><input type="range" id="relief" min="0" max="3.0" step="0.01" value="1.0"><input type="number" id="relief-input" min="0" max="5" step="0.01" value="1.0"></div>
+        <div class="control-group"><span class="control-label">Déplacement:</span><input type="range" id="displacement" min="0" max="0.3" step="0.001" value="0.1"><input type="number" id="displacement-input" min="0" max="0.5" step="0.001" value="0.1"></div>
+        <div class="control-group"><span class="control-label">Océan Brillant:</span><input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5"><input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5"></div>
 
-        <h3 style="margin-top: 20px;">Miniature Style</h3>
-        <div class="control-group">
-            <span class="control-label">Stylisation:</span>
-            <input type="range" id="stylization" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="stylization-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Effet Peinture:</span>
-            <input type="range" id="paintEffect" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="paintEffect-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Mode Nuit:</span>
-            <input type="range" id="nightMode" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="nightMode-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Lueur Magique:</span>
-            <input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="0.5">
-            <input type="number" id="glowIntensity-input" min="0" max="2" step="0.1" value="0.5">
-        </div>
+        <!-- NEW: Cloud controls -->
+        <h3>Nuages & Atmosphère</h3>
+        <div class="control-group"><span class="control-label">Déplac. Nuages:</span><input type="range" id="cloudDisplacement" min="0" max="0.2" step="0.001" value="0.05"><input type="number" id="cloudDisplacement-input" min="0" max="0.3" step="0.001" value="0.05"></div>
+        <div class="control-group"><span class="control-label">Estompe Nuages:</span><input type="range" id="cloudFade" min="0" max="0.6" step="0.01" value="0.2"><input type="number" id="cloudFade-input" min="0" max="1" step="0.01" value="0.2"></div>
+
+        <h3>Miniature Style</h3>
+        <div class="control-group"><span class="control-label">Stylisation:</span><input type="range" id="stylization" min="0" max="1" step="0.05" value="0"><input type="number" id="stylization-input" min="0" max="1" step="0.05" value="0"></div>
+        <div class="control-group"><span class="control-label">Effet Peinture:</span><input type="range" id="paintEffect" min="0" max="1" step="0.05" value="0"><input type="number" id="paintEffect-input" min="0" max="1" step="0.05" value="0"></div>
+        <div class="control-group"><span class="control-label">Mode Nuit:</span><input type="range" id="nightMode" min="0" max="1" step="0.05" value="0"><input type="number" id="nightMode-input" min="0" max="1" step="0.05" value="0"></div>
+        <div class="control-group"><span class="control-label">Lueur Magique:</span><input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="0.5"><input type="number" id="glowIntensity-input" min="0" max="2" step="0.1" value="0.5"></div>
 
         <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255,255,255,0.2);">
             <button id="preset-realistic" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Réaliste</button>
             <button id="preset-miniature" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Miniature</button>
             <button id="preset-night" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer; border-radius: 4px;">Night of Mini Dead</button>
         </div>
-        <h3 style="margin-top: 20px;">Miniature Style</h3>
-        <div class="control-group">
-            <span class="control-label">Stylisation:</span>
-            <input type="range" id="stylization" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="stylization-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Effet Peinture:</span>
-            <input type="range" id="paintEffect" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="paintEffect-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Mode Nuit:</span>
-            <input type="range" id="nightMode" min="0" max="1" step="0.05" value="0">
-            <input type="number" id="nightMode-input" min="0" max="1" step="0.05" value="0">
-        </div>
-        <div class="control-group">
-            <span class="control-label">Lueur Magique:</span>
-            <input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="0.5">
-            <input type="number" id="glowIntensity-input" min="0" max="2" step="0.1" value="0.5">
-        </div>
-
-        <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255,255,255,0.2);">
-            <button id="preset-realistic" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Réaliste</button>
-            <button id="preset-miniature" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Miniature</button>
-            <button id="preset-night" style="margin: 2px; padding: 5px 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.3); color: white; cursor: pointer;">Night of Mini Dead</button>
-        </div>
 
         <div class="debug-info">
-            <p><kbd>A</kbd> Toggle auto-rotation</p>
-            <p><kbd>R</kbd> Reset to defaults</p>
-            <p><kbd>F</kbd> Toggle auto-focus</p>
-            <p><kbd>T</kbd> Toggle test objects</p>
-            <p><kbd>D</kbd> Debug DOF info</p>
-            <p><kbd>S</kbd> Log detailed state</p>
-            <p><kbd>L</kbd> Toggle frame logging</p>
-            <p><kbd>1/2/3</kbd> Focus presets</p>
+            <p><kbd>A</kbd> Toggle auto-rotation</p><p><kbd>R</kbd> Reset to defaults</p><p><kbd>F</kbd> Toggle auto-focus</p><p><kbd>T</kbd> Toggle test objects</p><p><kbd>D</kbd> Debug DOF info</p><p><kbd>S</kbd> Log detailed state</p><p><kbd>L</kbd> Toggle frame logging</p><p><kbd>1/2/3</kbd> Focus presets</p>
         </div>
         <div class="debug-status">
             <div class="status-item"><span>Auto-rotation:</span><span id="status-autorotation" class="status-value active">ON</span></div>
@@ -416,7 +341,6 @@
     <!-- Scripts CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <!-- CRITICAL: Load BokehShader before BokehPass -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/BokehShader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
@@ -433,35 +357,9 @@
 
     <!-- Scripts UI -->
     <script>
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                const infoPanel = document.querySelector('.info-panel');
-                if (infoPanel) {
-                    infoPanel.style.transition = 'opacity 1s ease-out';
-                    setTimeout(() => {
-                        infoPanel.style.opacity = '0';
-                        setTimeout(() => {
-                            infoPanel.style.display = 'none';
-                        }, 1000);
-                    }, 8000);
-                }
-            }, 2000);
-        });
-
-        window.addEventListener('debugStateChange', (e) => {
-            const el = document.getElementById('status-' + e.detail.key);
-            if (!el) return;
-            el.textContent = e.detail.value ? 'ON' : 'OFF';
-            el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive');
-        });
-
-        window.addEventListener('autoRotationChange', (e) => {
-            const el = document.getElementById('status-autorotation');
-            if (el) {
-                el.textContent = e.detail.value ? 'ON' : 'OFF';
-                el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive');
-            }
-        });
+        window.addEventListener('load', () => { setTimeout(() => { const infoPanel = document.querySelector('.info-panel'); if (infoPanel) { infoPanel.style.transition = 'opacity 1s ease-out'; setTimeout(() => { infoPanel.style.opacity = '0'; setTimeout(() => { infoPanel.style.display = 'none'; }, 1000); }, 8000); } }, 2000); });
+        window.addEventListener('debugStateChange', (e) => { const el = document.getElementById('status-' + e.detail.key); if (!el) return; el.textContent = e.detail.value ? 'ON' : 'OFF'; el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive'); });
+        window.addEventListener('autoRotationChange', (e) => { const el = document.getElementById('status-autorotation'); if (el) { el.textContent = e.detail.value ? 'ON' : 'OFF'; el.className = 'status-value ' + (e.detail.value ? 'active' : 'inactive'); } });
     </script>
 </body>
 </html>
