--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
             min-width: 320px;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            max-height: 90vh;
+            overflow-y: auto;
         }
 
         body.debug-mode .debug-controls {
@@ -308,6 +310,7 @@
         <div class="control-group"><span class="control-label">Relief:</span><input type="range" id="relief" min="0" max="3.0" step="0.01" value="1.0"><input type="number" id="relief-input" min="0" max="5" step="0.01" value="1.0"></div>
         <div class="control-group"><span class="control-label">Déplacement:</span><input type="range" id="displacement" min="0" max="0.3" step="0.001" value="0.1"><input type="number" id="displacement-input" min="0" max="0.5" step="0.001" value="0.1"></div>
         <div class="control-group"><span class="control-label">Océan Brillant:</span><input type="range" id="oceanShine" min="0" max="1.0" step="0.01" value="0.5"><input type="number" id="oceanShine-input" min="0" max="1.0" step="0.01" value="0.5"></div>
+        <div class="control-group"><span class="control-label">Biomes Stylisés:</span><input type="range" id="biomeBlend" min="0" max="1.0" step="0.01" value="0.0"><input type="number" id="biomeBlend-input" min="0" max="1.0" step="0.01" value="0.0"></div>
 
         <h3>Nuages & Atmosphère</h3>
         <div class="control-group"><span class="control-label">Opacité Nuages:</span><input type="range" id="cloudOpacity" min="0" max="0.8" step="0.01" value="0.25"><input type="number" id="cloudOpacity-input" min="0" max="1" step="0.01" value="0.25"></div>
